# Cockroach

./: .gitignore  .gitmodules  CMakeLists.txt  Cockroach.hpp  Cockroach_cluster.cpp  Cockroach_conversion.cpp  Cockroach_mesh.cpp  Cockroach_registration.cpp  Cockroach_registration.hpp  Cockroach_utility.cpp  Cockroach_visualization.cpp  main.cpp  readme.md
batch/: build.bat  config.bat  configure.bat  configure_INSTALL.bat  install.bat  launch.bat  readme.md  short.bat
cmake/: CockroachConfig.cmake.in
examples/cli/: CMakeLists.txt
examples/cli/src/: main.cpp
examples/show_bug/: CMakeLists.txt
examples/show_bug/batch/: build.bat  config.bat  launch.bat  short.bat
examples/show_bug/cloud/: bug.ply
examples/show_bug/src/: main.cpp
examples/show_the_bug/: CMakeLists.txt
examples/show_the_bug/batch/: build.bat  config.bat  launch.bat  short.bat
examples/show_the_bug/cloud/: cube.ply
examples/show_the_bug/src/: main.cpp
include/: CMakeLists.txt  Cockroach.hpp
include/Cockroach/: CKR_Cluster.hpp  CKR_Conversion.hpp  CKR_Mesh.hpp  CKR_Registration.hpp  CKR_Utility.hpp  CKR_Visualization.hpp  Clustering.hpp  Conversion.hpp  Meshing.hpp  Registration.hpp  Transformation.hpp  Utility.hpp  Visualization.hpp  greetings.hpp
third_parties/: readme.md
